周波数のJsonObjectの処理を改善